# netlist-diff

./: README.md  setup.cfg
docs/img/: 555-stripboard.fzz  555-stripboard_bb.png.md  555-stripboard_bom.html  555.fzz  555_bb.png.md  555_netlist.xml
in_progress_tests/: test_diff.py
plan/: journal.md
src/netlist_diff/: component_finder.py  diff.py
test/data/: 555-stripboard_netlist.xml  one-r.fzz  one-r_netlist.xml  two-r.fzz  two-r_netlist.xml
test/netlist-diff/helpers/: sample_data.py
test/netlist-diff/integration/: test_diff.py
test/netlist-diff/unit/: test_component_finder.py
test/netlist_diff/helpers/: sample_data.py
test/netlist_diff/unit/: test_component_diffs.py  test_component_finder.py
test_in_progress/: test_diff.py
