[metadata]
name = netlist-diff
version = 0.1
author = Romilly Cocking
author_email = romilly.cocking@gmail.com
description = Compare two fritzinfg netlists.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/romilly/netlist-diff
project_urls =
    Bug Tracker = https://github.com/romilly/netlist-diff/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
   PyHamcrest

[options.entry_points]
console_scripts =
    localise_assets = netlist_diff.diff:main

[options.packages.find]
where = src